--- a/ticket-1/index.html
+++ b/ticket-1/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shopping List</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
       <h1>Shopping List</h1>
       <div id="app">
         <input type="text" id="itemInput" placeholder="Add an item" />
-        <button id="addItemBtn">Add</button>
+        <button class="addItemBtn">Add</button>
         <ul id="shoppingList"></ul>
       </div>
     </div>
