--- a/ticket-1/index.html
+++ b/ticket-1/index.html
@@ -11,9 +11,10 @@
       <h1>Shopping List</h1>
       <div id="app">
         <input type="text" id="itemInput" placeholder="Add an item" />
-        <button class="addItemBtn">Add</button>
+        <button class="addItemBtn" id="addItemBtn">Add</button>
         <ul id="shoppingList"></ul>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
